Environment: fix ERR:Network errors when refreshing app on manifest Historical employment: adjust size and spacing of "OR" for self-employed NOA

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -182,8 +182,11 @@ $material-box
 			opacity 1
 .option
 	&-separator
-		font-size 5em
+		font-size 2em
 		text-transform uppercase
+		width 100%
+		display block
+		text-align center
 		font-weight $headingFontWeight
 .address
 	&-details
